--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,5 +1,7 @@
 
-<html><h1>The Value of a Weapon in Valorant (WIP)</h1>
+<html>
+  <head><title>The Value of a Weapon in Valorant</title></head>
+<h1>The Value of a Weapon in Valorant (WIP)</h1>
 
 <h2> This website will host the Jupyter notebook writeup for the final tutorial. The tutorial will be added by 12/20/2021 at 4:00 pm by the latest. </h2>
 
